<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/systemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#808080"
            android:text="@string/systemTitle"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chooseYourProduct"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/riceCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/riceCheckBoxLabel"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/milkCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/milkCheckBoxLabel"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/meatCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/meatCheckBoxLabel"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/beanCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beanCheckBoxLabel"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/sodaCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sodaCheckBoxLabel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/resultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:onClick="onClickResultButton"
                android:text="@string/resultButtonLabel"
                app:cornerRadius="0dp" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>